tests/ir_check/unbound-params.expect
---CODE---
1
---STDERR---
error: undefined parameter name: K
  ┌─ tests/errors/unbound-params.fil:6:5
  │
6 │     @[G, G+#K] a: #P,
  │     ^^^^^^^^^^ parameter `K' is not defined in the signature

error: undefined parameter name: P
  ┌─ tests/errors/unbound-params.fil:6:19
  │
6 │     @[G, G+#K] a: #P,
  │                   ^^ parameter `P' is not defined in the signature

error: undefined parameter name: M
  ┌─ tests/errors/unbound-params.fil:5:22
  │
5 │ comp main[#W, #L]<G: #M>(
  │                      ^^ parameter `M' is not defined in the signature

error: undefined event name: L
  ┌─ tests/errors/unbound-params.fil:7:15
  │
7 │ ) -> () where #W+#N+L > L+1 {
  │               ^^^^^^^^^^^^^^ event `L' is not defined in the component

error: undefined parameter name: N
  ┌─ tests/errors/unbound-params.fil:7:15
  │
7 │ ) -> () where #W+#N+L > L+1 {
  │               ^^^^^^^^^^^^^^ parameter `N' is not defined in the signature

error: undefined parameter name: J
  ┌─ tests/errors/unbound-params.fil:8:22
  │
8 │     a := new Add[#W, #J]<L+#N>(a);
  │                      ^^ parameter `J' is not defined in the signature

error: undefined event name: L
  ┌─ tests/errors/unbound-params.fil:8:26
  │
8 │     a := new Add[#W, #J]<L+#N>(a);
  │                          ^^^^ event `L' is not defined in the component

error: undefined parameter name: N
  ┌─ tests/errors/unbound-params.fil:8:26
  │
8 │     a := new Add[#W, #J]<L+#N>(a);
  │                          ^^^^ parameter `N' is not defined in the signature

Compilation failed with 8 errors.
Run with --show-models to generate assignments for failing constraints.
